added gui tests