@@ -29,6 +29,9 @@
         <!-- in order to java fx tests works -->
         <argLine>
             --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-exports javafx.base/javafx.beans.property=ALL-UNNAMED
+            --add-exports javafx.base/com.sun.javafx=ALL-UNNAMED
+            --add-exports javafx.base/com.sun.javafx.beans=ALL-UNNAMED
         </argLine>
     </properties>
     <repositories>
